--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
+  background-image: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/dance-floor-background-8838.jpg')
 }
 .title, .addDancerButton{
   padding:5px 12px;
@@ -24,4 +25,7 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+  color: yellow;
+  padding: 20px;
+  background-image: url('dancer1.png')
 }
